--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,12 +2,12 @@
 <html>
 <head>
     <title>Home Page</title>
-    <link rel='stylesheet' href='/stylesheets/style.css'/>
-    <link rel="stylesheet" href="/stylesheets/themes/MobilePage.min.css"/>
-    <link rel="stylesheet" href="/stylesheets/themes/jquery.mobile.icons.min.css"/>
-    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile.structure-1.4.5.min.css"/>
-    <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
-    <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel="stylesheet" href="/stylesheets/themes/MobilePage.min.css" />
+    <link rel="stylesheet" href="/stylesheets/themes/jquery.mobile.icons.min.css" />
+    <link rel="stylesheet" href="/stylesheets/jquery.mobile.structure-1.4.5.min.css" />
+    <script src="/javascripts/jquery-1.11.1.min.js"></script>
+    <script src="/javascripts/jquery.mobile-1.4.5.min.js"></script>
 </head>
 <body>
 <div data-role="page">
